assets/less/new/layout.less
// page template

.header-separator {
  // Anchor it to the bottom
  position: absolute;
  bottom: 0;
  // Fix 1 pixel gap on resize
  margin-top: -1px;
  // We probably don't need background-color, but to be safe
  color: var(--page-header-bg);
  background-color: var(--bg);
  // Give it some space
  width: 100%;
  min-height: 72px;
  // Prevent any gaps on the top
  line-height: 0;
}

.pre-footer-cover-container {
  position: relative;

  .page-separator-cover {
    color: black;
  }
}

.page-separator-cover {
  position: absolute;
  bottom: 0;
  width: 100%;
  line-height: 0;
  color: var(--bg);
}

.page-separator {
  width: 100%;
}

#masthead,
header {
  display: flex;
  flex-direction: column;
  min-height: 200px;
  background-color: var(--page-header-bg);
  color: var(--txt);
  padding-top: calc(var(--nav-height) * 2);
  isolation: isolate;

  .breadcrumbs {
    font-size: 0.75rem;
    font-weight: 200;
  }

  .tagline {
    margin-top: 1rem;
    font-size: 4rem;

  }

  @media (max-width: @md) {
    min-height: 300px;
  }
}

.logo {
  max-height: 100%;
  max-width: 300px;
  min-width: 200px;
  height: 60px;
  width: auto;
  transition: color .2s;
}

.logo:hover,
.mozilla-logo:hover {
  color: var(--accent);
  transform: none;
}


.container {
  position: relative;
  display: grid;
  gap: 60px;
  padding-inline: 1rem;
  padding-block: 100px;
  margin-inline: auto;
  max-width: 1280px;
  overflow: hidden;

  @media (max-width: @md) {
    width: 100%;
    padding-inline: 0;
  }
}

.section-text {
  max-inline-size: 55%;
  margin-inline: auto;
  margin-bottom: 2em;
  font-weight: 400;
  font-size: 16px;

  &.tight {
    max-inline-size: 50%;
  }
  &.wide {
    max-inline-size: 70%;
  }

  @media (max-width: @md) {
    max-inline-size: 90%;
    margin-inline: unset;
    padding-inline: 1rem;

    &.tight,
    &.wide {
      max-inline-size: 90%;
    }

  }
}


.section-text :where(h1) {
  font-size: 2.5rem;
  font-weight: 800;
  margin-bottom: 0;
}

.section-text :where(h2) {
  font-size: 2rem;
  font-weight: 600;
  margin: 0;
}

.section-text :where(h3) {
  font-size: 1.25rem;
  font-weight: 400;
  margin: 0 0 1em;
}

.styled-list {
  list-style: none;
  margin-left: 0;
  margin-bottom: 1.5rem;
  text-indent: -1rem;
  line-height: 30px;


  li {
    margin-bottom: 0.5rem;
  }

  li:before {
    content: '●';
    color: var(--accent);
    margin-right: 0.75rem;
  }

  @media (max-width: @md) {
    text-indent: -2.5rem;
    li:before {
      margin-right: 1rem;
    }
  }
}


// This is actually just the rest of the 115-homepage.css waiting to be cannibalized!

html {
  font-family: 'Inter', sans-serif;
}

@supports (font-variation-settings: normal) {
  html {
    font-family: 'Inter var', sans-serif;
  }
}

picture,
img {
  max-width: 100%;
}

body {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 300;
  background: var(--bg);
  color: var(--txt);
  position: relative;
  scroll-padding-top: var(--nav-height);
  min-height: 100vh;
}

.hidden {
  display: none;
}

h1, h2 {
  font-family: 'Metropolis', sans-serif;
  font-weight: 600;
}


.icon {
  display: inline-block;
  height: 32px;
  width: 32px;
}

.icon-apple {
  position: relative;
  top: -2px;
}

.icon .icon-linux-fg {
  fill: transparent !important;
}

.icon-tux-alt .icon-linux-fg {
  fill: var(--color-gray-20) !important;
}

.icon-tux-alt .icon-linux-bg {
  fill: transparent !important;
}

svg {
  max-height: 100%;
  max-width: 100%;
}


.nav-links {
  display: flex;
  align-items: center;
  gap: 30px;
}

/* Hide the header download button if the browser does not support javascript */
.no-js .header-download {
  display: none !important;
}

.nav-ln,
.cta-ln,
.footer-ln {
  font-size: 1.25rem;
  line-height: 1rem;
  font-weight: 600;
  text-decoration: none;
  position: relative;
  transition: font-size .2s;
}

.nav-ln::after,
.cta-ln::after,
.footer-ln::after {
  content: '';
  position: absolute;
  inset-inline: 0;
  bottom: -0.3em;
  height: 2px;
  background-color: var(--color-blue-60);
  background-image: linear-gradient(to right, var(--color-blue-50), var(--color-purple-50));
}

.nav-ln:hover,
.footer-ln:hover {
  line-height: 1rem;
}

.cta-ln:hover {
  font-size: 1.3rem;
  line-height: 1rem;
}

.nav-ln::after,
.footer-ln::after {
  width: 0;
  transition: width .3s;
}

.nav-ln:hover::after,
.footer-ln:hover::after {
  width: 100%;
}

.nav-btn::before {
  display: none;
}

header,
section {
  position: relative;
  text-align: center;
  scroll-padding: var(--nav-size);
}

.container.hero {
  padding-block: 10vh 40vh;
}

.hero-text {
  font-size: 1.5rem;
  font-weight: 300;
  text-align: center;
  line-height: 1.4;
  max-inline-size: 50.5rem;
}

.tagline {
  font-size: 6rem;
  line-height: 1;
  font-weight: bold;
  margin-bottom: 1rem;
}

.txt-gradient {
  background-color: var(--accent);
  background-image: linear-gradient(to right, var(--color-blue-50), var(--color-purple-50));
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
}

.sub-tag {
  margin-top: 0;
}

.hero-download {
  display: grid;
  place-items: center;
  gap: 12px;
}

.mask {
  color: var(--bg);
  filter: drop-shadow(0 -2px 0 var(--separator-color));
  position: absolute;
  inset-inline: 0;
  bottom: 0;
  height: 75px;
}

.mask > svg {
  position: absolute;
  inset-inline: 0;
  max-height: none;
  max-width: none;
  bottom: -1px;
}


.cta {
  margin-top: 80px;
}

.graphic {
  position: relative;
  isolation: isolate;
  width: 100%;
}

.carousel {
  position: absolute;
  inset: 0;
  z-index: 2;
}

.carousel > picture {
  position: absolute;
  inset: 0;
  opacity: 1;
  z-index: 3;
}

.carousel > picture:last-child {
  opacity: 0;
  animation-duration: 30s;
  animation-name: fade-in-out;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}


.floating-icons {
  --size: 60px;
  position: absolute;
  display: flex;
  inset-block: 200px;
  inset-inline: 0;
  overflow: hidden;
  opacity: .75;
  z-index: -1;
}
/* ... */

